--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Dataflow Simulator for Long-Context, Causal Transformers</h1>
+        <h2><a href="https://github.com/als244/ml_dataflow">Link to Repo</a></h2>
     </header>
 
     <div class="main-container">
