--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -70,9 +70,9 @@
                         <input type="number" id="matmul_efficiency" name="matmul_efficiency" value="0.7" step="0.01" min="0" max="1" required>
                         <label for="attn_efficiency">Attn Efficiency:</label>
                         <input type="number" id="attn_efficiency" name="attn_efficiency" value="0.55" step="0.01" min="0" max="1" required>
-                        <label for="home_bw_gbit_sec">Home BW (Gbps):</label>
+                        <label for="home_bw_gbit_sec">Home BW (Gb/s):</label>
                         <input type="number" id="home_bw_gbit_sec" name="home_bw_gbit_sec" value="400" min="1" required>
-                        <label for="peer_bw_gbit_sec">Peer BW (Gbps):</label>
+                        <label for="peer_bw_gbit_sec">Peer BW (Gb/s):</label>
                         <input type="number" id="peer_bw_gbit_sec" name="peer_bw_gbit_sec" value="100" min="1" required>
                     </div>
                 </div> <div class="form-footer">
