--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -23,10 +23,18 @@
                         <input type="number" id="seqlen" name="seqlen" value="32" min="1" required>
                         <label for="train_token_ratio">Train Token Ratio:</label>
                         <input type="number" id="train_token_ratio" name="train_token_ratio" value="1.0" step="0.05" min="0.05" max="1.0" required>
+                        <label for="train_chunk_distribution">Train Chunk Distribution:</label>
+                        <select id="train_chunk_distribution" name="train_chunk_distribution" disabled>
+                            <option value="Uniform" selected>Uniform</option>
+                            <option value="Suffix">Suffix</option>
+                        </select>
                         <label for="min_chunk_size">Min Chunk Size:</label>
                         <input type="number" id="min_chunk_size" name="min_chunk_size" value="1536" min="1" required disabled>
                         <label for="chunk_type">Chunk Type:</label>
-                        <input type="text" id="chunk_type" name="chunk_type" value="Equal Data" disabled>
+                        <select id="chunk_type" name="chunk_type" disabled>
+                            <option value="Equal Data" selected>Equal Data</option>
+                            <option value="Equal Computation">Equal Computation</option>
+                        </select>
                     </div>
 
                     <div id="param-grid">
@@ -56,7 +64,12 @@
                         <label for="expert_dim">Expert Dim:</label>
                         <input type="number" id="expert_dim" name="expert_dim" value="27648" min="1" step="1" required>
                         <label for="attn_type">Attention Type:</label>
-                        <input type="text" id="attn_type" name="attn_type" value="Exact" disabled>
+                        <select id="attn_type" name="attn_type" disabled>
+                            <option value="Exact" selected>Exact</option>
+                            <option value="Approximate">Approximate</option>
+                            <option value="Hierarchical">Hierarchical</option>
+                            <option value="Sparse">Sparse</option>
+                        </select>
                     </div>
 
                     <div id="param-grid">
