Make users change TFLOPs to agree with bitwidth, instead of assume a scale

--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -75,7 +75,7 @@
                     <div id="param-grid">
                         <hr class="section-separator">
                         <div class="section-header"><h3>Hardware Specs</h3><h5>In practice, these will be discovered by the system</h5></div>
-                        <label for="hardware_max_tflops">BF16 TFLOPS:</label>
+                        <label for="hardware_max_tflops">TFLOPS (at bitwidth):</label>
                         <input type="number" id="hardware_max_tflops" name="hardware_max_tflops" value="989" step="0.1" min="0.1" required>
                         <label for="hardware_mem_bw_gbs">Dev Mem BW (GB/s):</label>
                         <input type="number" id="hardware_mem_bw_gbs" name="hardware_mem_bw_gbs" value="3350" step="1" min="1" required>
