--- a/libdataflowring/sim_app/static/style.css
+++ b/libdataflowring/sim_app/static/style.css
@@ -18,7 +18,7 @@ body {
     color: #333;
     background-color: #fff;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     height: 100vh; /* Make body exactly viewport height */
     overflow: hidden;   /* Prevent body from scrolling */
 }
