--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Dataflow Simulator for Long-Context, Causal Transformers</h1>
+        <h1>Dataflow Simulator for Causal Transformers</h1>
         <h2><a href="https://github.com/als244/ml_dataflow">Link to Repo</a></h2>
     </header>
 
@@ -21,14 +21,16 @@
                     <div id="param-grid">
                         <div class="section-header"><h3>Simulator Settings</h3></div>
                         <label for="cycle_rate_micros"> Cycle Rate (micros/cycle):</label>
-                        <input type="number" id="cycle_rate_micros" name="cycle_rate_micros" value="2000" min="1" required>
+                        <input type="number" id="cycle_rate_micros" name="cycle_rate_micros" value="1000" min="1" required>
                         <label for="min_chunk_size">Min Chunk Size (Tokens):</label>
-                        <input type="number" id="min_chunk_size" name="min_chunk_size" value="8192" min="1" required>
+                        <input type="number" id="min_chunk_size" name="min_chunk_size" value="12288" min="1" required>
                         <div class="section-header"><h3>Training Spec</h3></div>
+                        <label for="num_seqs">Num Seqs (Per Ring/Per Round):</label>
+                        <input type="number" id="num_seqs" name="num_seqs" value="24" min="1" required>
                         <label for="seqlen">Sequence Length (K):</label>
-                        <input type="number" id="seqlen" name="seqlen" value="128" min="1" required>
+                        <input type="number" id="seqlen" name="seqlen" value="12" min="1" required>
                         <label for="max_attended_tokens">Max Attended Tokens (K):</label>
-                        <input type="number" id="max_attended_tokens" name="max_attended_tokens" value="128" min="1" required>        
+                        <input type="number" id="max_attended_tokens" name="max_attended_tokens" value="12" min="1" required>        
                         <label for="chunk_type">Chunk Type:</label>
                         <select id="chunk_type" name="chunk_type" required disabled>
                             <option value="Equal Data" selected>Equal Data</option>
@@ -38,7 +40,7 @@
 
                     <div id="param-grid">
                         <div class="section-header"><h3>Training Environment</h3></div>
-                        <label for="N">Num Devices:</label>
+                        <label for="N">Num Devices (Per Ring):</label>
                         <input type="number" id="N" name="N" value="8" min="1" required>
                         <label for="max_device_memory_gb">Max Device Memory (GB):</label>
                         <input type="number" id="max_device_memory_gb" name="max_device_memory_gb" value="80" step="0.1" min="1" required>
@@ -49,7 +51,7 @@
                         <label for="bitwidth">Bitwidth:</label>
                         <input type="number" id="bitwidth" name="bitwidth" value="8" min="1" step="1" required>
                         <label for="total_layers">Total Blocks:</label>
-                        <input type="number" id="total_layers" name="total_layers" value="60" min="1" required>
+                        <input type="number" id="total_layers" name="total_layers" value="63" min="1" required>
                         <label for="vocab_size">Vocab Size:</label>
                         <input type="number" id="vocab_size" name="vocab_size" value="129280" min="1" required>
                         <label for="model_dim">Model Dim:</label>
