--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -26,7 +26,7 @@
                         <input type="number" id="min_chunk_size" name="min_chunk_size" value="12288" min="1" required>
                         <div class="section-header"><h3>Training Spec</h3></div>
                         <label for="num_seqs">Num Seqs Per Ring (Per Round):</label>
-                        <input type="number" id="num_seqs" name="num_seqs" value="120" min="1" required>
+                        <input type="number" id="num_seqs" name="num_seqs" value="90" min="1" required>
                         <label for="seqlen">Sequence Length (K):</label>
                         <input type="number" id="seqlen" name="seqlen" value="4" min="1" required>
                         <label for="max_attended_tokens">Max Attended Tokens (K):</label>
@@ -51,9 +51,13 @@
                     <div id="param-grid">
                         <div class="section-header"><h3>Model Spec</h3></div>
                         <label for="bitwidth">Matmul Bitwidth:</label>
-                        <input type="number" id="bitwidth" name="bitwidth" value="8" min="1" step="1" required>
+                        <select id="bitwidth" name="bitwidth" required disabled>
+                            <option value="8" selected>8</option>
+                            <option value="16">16</option>
+                            <option value="32">32</option>
+                        </select>
                         <label for="total_layers">Total Blocks:</label>
-                        <input type="number" id="total_layers" name="total_layers" value="63" min="1" required>
+                        <input type="number" id="total_layers" name="total_layers" value="59" min="1" required>
                         <label for="vocab_size">Vocab Size:</label>
                         <input type="number" id="vocab_size" name="vocab_size" value="129280" min="1" required>
                         <label for="model_dim">Model Dim:</label>
@@ -88,6 +92,8 @@
                         <input type="number" id="attn_fwd_efficiency" name="attn_fwd_efficiency" value="0.3" step="0.01" min="0" max="1" required>
                         <label for="attn_bwd_efficiency">Attention Bwd Efficiency:</label>
                         <input type="number" id="attn_bwd_efficiency" name="attn_bwd_efficiency" value="0.25" step="0.01" min="0" max="1" required>
+                        <!-- <label for="head_efficiency">Head Efficiency:</label>
+                        <input type="number" id="head_efficiency" name="head_efficiency" value="0.35" step="0.01" min="0.01" max="1" required> -->
                         <label for="home_bw_gbit_sec">Home BW (Gb/s):</label>
                         <input type="number" id="home_bw_gbit_sec" name="home_bw_gbit_sec" value="400" step="0.1" min="0.1" required>
                         <label for="peer_bw_gbit_sec">Peer BW (Gb/s):</label>
